--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.4
   intl: ^0.18.1
+  firebase_database: ^10.2.4
 
 dev_dependencies:
   flutter_test:
