--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.8.4
   intl: ^0.18.1
   firebase_database: ^10.2.4
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
